syntax = "proto3";

package v1;

service Signer {
  rpc Sign(SignRequest) returns (SignResponse) { }
}

message SignRequest {
  string account = 1;
  bytes data = 2;
  uint64 domain = 3;
}

message SignResponse {
  bytes signature = 1;
}
